2008-01-22	Thomas Hempel  <thomas@typo3-unleashed.net>

	* Installer: Added a "hide" button to hide the results of executed methods
	* Installer: Added skeletons for gfx check methods
	* Installer: improved the look of the login screen
	* Installer: Smaller bugfixes and enhancements in error handling

2008-01-22  Ingo Renner  <ingo@typo3.org>

	* added feature: #7223: update prototype and scriptaculous to their most recent versions
	* fixed bug: #7237: There is no way to get loaded interface
	* fixed bug: #7238: t3editor should not depend on MochiKit-Javascript-Framework

2008-01-21  Benjamin Mack  <mack@xnos.org>

	* Fixed #7166: CSH broken in EM, Info View (Thanks to Francois Suter)

2008-01-21  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed JS error when opening the TYPO3 image browser and proc.plainImageMode is not set

2008-01-21  Ingo Renner  <ingo@typo3.org>

	* fixed tab borders in TCEforms
	* now the module menu in backend.php is as wide as in alt_main.php

2008-01-20	Thomas Hempel  <thomas@typo3-unleashed.net>

	* Installer: Renamed the tab back from "Setup" to "Installer" to avoid problems in translation tool
	* Installer: reorganized installer module (rewrite)
	* Installer: implemeted some features for setup module to make it usable for most cases
	* Installer: added database checks (big thanks to Francois Suter!!!)
	* Installer: started implementation of image checks
	* Installer: prepared codebase for third party patches

2008-01-20  Ingo Renner  <ingo@typo3.org>

	* fixed bug #7211: "Start in Module" does not work anymore
	* fixed check for wrong implementation of toolbarItem interface
	* renamed typo3/css/verticalmenu.css to modulemenu.css
	* changed the way how javascritp and css files needed to be referenced when adding them to backend.php, now relative to typo3/
	* added note item to EM when there may be additional configuration fields