@@ -3,7 +3,7 @@ $GLOBALS['MCA']['directories'] = array (
 	'general' => array (
 		'title' => 'module_directories_title',
 	),
-	
+		
 	'checks' => array (
 		'directories' => array (
 			'title' => 'module_directories_checks_directories',
